# realmate-challenge

./: README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/templates/: front.html
realmate_challenge/: asgi.py  settings.py  wsgi.py
